create github pages

--- a/page1.html
+++ b/page1.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="pricing-table1 cid-s2aHGwHn66" id="pricing-tables1-5">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="pricing-table1 cid-s2aHGwHn66" id="pricing-tables1-5">
 
     
 
